Fix UI overlap where control bar was appearing on top of the navbar during scroll.

--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -130,6 +130,7 @@
     .navbar.is-fixed-top {
         border-bottom: 1px solid var(--bulma-border);
         background-color: var(--bulma-navbar-background-color) !important;
+        z-index: 1000 !important;
     }
 
     .shadow-sm {
