--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -792,7 +792,7 @@
                         <div class="card box shadow-sm">
                             <header class="card-header border-none shadow-none">
                                 <p class="card-header-title has-text-primary">
-                                    <i class="bi bi-webhook mr-2"></i> Webhooks de Integração
+                                    <i class="bi bi-hdd-network mr-2"></i> Webhooks de Integração
                                 </p>
                             </header>
                             <div class="card-content pt-0">
