--- a/app/templates/wishlist.html
+++ b/app/templates/wishlist.html
@@ -150,11 +150,11 @@
 
                         // Check if already in library
                         if (owned) {
-                            ownedHtml = 'SIM';
+                            ownedHtml = 'Atualizado';
                             ownedClass = 'has-text-success';
                         } else {
-                            ownedHtml = 'NÃO';
-                            ownedClass = 'has-text-warning'; // Sincronizado com o status "Missing" da biblioteca
+                            ownedHtml = 'Não';
+                            ownedClass = 'has-text-grey-lighter';
                         }
 
                         // Check if released - Correcting logic for YYYYMMDD comparison
