--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -28,7 +28,7 @@
                                 Erros/Identificação</a></li>
                         <li><a data-target="Tags"><i class="bi bi-tags-fill mr-2"></i> Tags</a></li>
                         <li><a data-target="Activity"><i class="bi bi-clock-history mr-2"></i> Atividade</a></li>
-                        <li><a data-target="Webhooks"><i class="bi bi-webhook mr-2"></i> Webhooks <span
+                        <li><a data-target="Webhooks"><i class="bi bi-plug-fill mr-2"></i> Webhooks <span
                                     class="tag is-warning is-light is-size-9 ml-1"
                                     style="font-size: 0.6rem;">BETA</span></a></li>
                         <li><a data-target="Cloud"><i class="bi bi-cloud-fill mr-2"></i> Cloud Storage <span
